--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1542,6 +1542,23 @@ url.yank_ignored_parameters:
     - utm_content
   desc: URL parameters to strip with `:yank url`.
 
+content.context_engines:
+  type:
+    name: List
+    valtype: String
+    none_ok: true
+  default:
+    - DEFAULT
+  desc: Search.
+
+content.context_advanced_engines:
+  type:
+    name: List
+    valtype: SearchEngineUrl
+    none_ok: true
+  default:
+  desc: Advanced search.
+
 ## window
 
 window.hide_wayland_decoration:
